--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,7 +140,7 @@ header{
 
   /* banner section */
 
-  .banner{
+  .section_banner{
     padding: 0 40px;
     background-color: white;
   }
@@ -390,7 +390,7 @@ header{
 
   /* temoignage */
 
-  .temoignages{
+  .section_temoignages{
     background: url("../assets/images/e-diop-byZ30s8xUgM-unsplash.jpg") no-repeat center center/cover;
     padding: 80px 40px;
     text-align: center;
@@ -469,6 +469,14 @@ header{
 
   .details_imgRight{
     width: 50%;
+  }
+
+  .details_imgRight{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
   }
 
   @media screen and (max-width: 768px){
